# ggbm

./: README.md
cpp/: CMakeLists.txt  README.md  main.cpp
cpp/src/: Base.h  Config.h  ConfigValue.cpp  ConfigValue.h  Dataset.cpp  Dataset.h  FeatureTransformer.cpp  FeatureTransformer.h  GGBM.cpp  GGBM.h  InputParser.cpp  InputParser.h  Leaf.cpp  Leaf.h  Loss.cpp  Loss.h  OptData.cpp  OptData.h  TaskQueue.cpp  TaskQueue.h  Tree.cpp  Tree.h  UtilityFlow.h  dataset_stub.h
shitty_python_prototypes/: FeatureTransformer.py  GGBM.py  Losses.py  Tree.py  Tree_examples.ipynb  dataset_transform.py  test.csv  train.csv
